--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,22 @@
+body {
+    margin: 0%;
+}
+
 .logo {
-    margin: auto;
-    width: 100%;
+    /* margin: auto; */
+    max-width: 100%;
+    /* height: 90%; */
+    max-height: 80vh;
+    /* border: 5px solid green; */
     
 }
 
 .header {
-    margin: auto;
-    width: 90%;    
+    text-align:center;
+    width:100%;
+    /* display:block; */
+    /* margin: auto; */
+    /* border: 5px solid red; */
 }
 
 .nav {
