--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,14 @@ body {
     /* border: 5px solid red; */
 }
 
+.foot {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+}
+
 .nav {
     /* visibility: hidden; */
 }
