--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,49 @@
 body {
-    margin: 0%;
+  margin: 0px;
+  background-color: #FEFBF6;
 }
 
-.logo {
-    max-width: 100%;
-    max-height: 80vh;
-    /* border: 5px solid green; */
-    
+/* Nav stuff */
+.nav {
+  display: flex;
+  align-items: stretch;
+  max-height: 20vh;
+  border-bottom: #57747e 2vh solid;
 }
 
+.destinations {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+ul {
+  padding: 0%;
+}
+
+.nLogo {
+  padding: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#DGlogo {
+  max-width: 100%;
+}
+
+/* Header stuff */
 .header {
-    text-align:center;
-    width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
-.foot {
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;            /* Footer height */
+#DoggyValhalla {
+  max-width: 100vw;
+  max-height: 75vh;
 }
-
 
 
 /* Imported Navbar */
